--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,9 @@
 - task: SqlAzureDacpacDeployment@1
   displayName: Execute Azure SQL : DacpacTask
   inputs:
-    azureSubscription: '<Azure service connection>'
-    ServerName: '<Database server name>'
-    DatabaseName: '<Database name>'
-    SqlUsername: '<SQL user name>'
-    SqlPassword: '<SQL user password>'
-    DacpacFile: '<Location of Dacpac file in $(Build.SourcesDirectory) after compilation>'
+    azureSubscription: 'AzurePersonalAcct'
+    ServerName: 'jparktestsignalr.database.windows.net'
+    DatabaseName: 'SignalR'
+    SqlUsername: 'dbadmin'
+    SqlPassword: 'Qwerty@1234'
+    DacpacFile: '.'
